--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "almasaeed2010/adminlte": "^3.2",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "laravel/ui": "*"
+        "laravel/ui": "^4.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
